# c-gtk4-template

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: main.c
